-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Replication
-
Fully Compatible
-
ALL
-
Repl 2025-10-27
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/src/mongo/db/validate/validate_adaptor.cpp:886: MISSING_LOCK 177329 Accessing "this->_progress" without holding lock "mongo::OperationContext._client". Elsewhere, "mongo::ValidateAdaptor._progress" is written to with "OperationContext._client" held 2 out of 3 times.