SERVER-111615 protect access to validate's _progress (#43002)

GitOrigin-RevId: 752f35b221098230fb6da092d3418da5fcdb0bf3